<resources>
    <string name="app_name">LPR</string>
    <string name="some_thing_went_wrong_error_msg">Something went wrong, Please try again</string>
    <string name="check_internet_connection">Check your internet connection</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="your_history">Your History</string>
    <string name="driver_name">Driver Name</string>
    <string name="entry_permit">Entry Permit</string>
    <string name="driver_type">Driver Type</string>
    <string name="car_plate">Car Plate</string>
    <string name="car_brand">Car Brand</string>
    <string name="last_entry">Last Entry</string>
    <string name="car_color">Car Color</string>
    <string name="action">Action</string>
    <string name="actions">Actions</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="note">Note</string>
    <string name="checkin">Checkin</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Checkout</string>
    <string name="confirm_action_dialog_title">Confirm the Action</string>
    <string name="confirm_action_dialog_desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</string>
    <string name="reshoot">Reshoot</string>
    <string name="done">Done</string>


    <string name="confirm_image_dialog_title">Confirm the clarity\nof the license plate</string>
    <string name="confirm_image_dialog_desc">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad</string>
    <string name="car_description">Car Description</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="scan_by_camera">Scan By Camera</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="reject">Reject</string>
    <string name="choose_site">Choose Site</string>
    <string name="choose_gate">Choose Gate</string>
    <string name="choose_your_current_site">Choose Your Current Site</string>
    <string name="choose_your_current_gate">Choose Your Current Gate</string>
    <string name="confirm">Confirm</string>
    <string name="change_gate">Change Gate</string>
    <string name="no_data_found">No Data Found</string>


</resources>