<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">


            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Vehicle owner information"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/back"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="@+id/back" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:src="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back" />

            <TextView
                android:id="@+id/nameHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Ahmed Taher"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameHint" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/typeLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_grey"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <ImageView
                    android:id="@+id/typeImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_account"
                    app:layout_constraintBottom_toBottomOf="@+id/type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/typeHint" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Visitor"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/typeImage"
                    app:layout_constraintTop_toBottomOf="@+id/typeHint" />

                <TextView
                    android:id="@+id/typeHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_type"
                    app:layout_constraintStart_toStartOf="@+id/type"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/permissionLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_grey"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/typeLayout"
                app:layout_constraintTop_toBottomOf="@+id/name">

                <ImageView
                    android:id="@+id/permissionImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_permission_grant"
                    app:layout_constraintBottom_toBottomOf="@+id/permission"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/permissionHint" />

                <TextView
                    android:id="@+id/permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="No Permission"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/permissionImage"
                    app:layout_constraintTop_toBottomOf="@+id/permissionHint" />

                <TextView
                    android:id="@+id/permissionHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entry_permit"
                    app:layout_constraintStart_toStartOf="@+id/permission"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/carPlateLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_grey"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeLayout">

                <ImageView
                    android:id="@+id/carPlateImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_license_plate"
                    app:layout_constraintBottom_toBottomOf="@+id/carPlate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/carPlateHint" />

                <TextView
                    android:id="@+id/carPlate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="A P C 1 2 4"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/carPlateImage"
                    app:layout_constraintTop_toBottomOf="@+id/carPlateHint" />

                <TextView
                    android:id="@+id/carPlateHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_plate"
                    app:layout_constraintStart_toStartOf="@+id/carPlate"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/carBrandLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_grey"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/carPlateLayout"
                app:layout_constraintTop_toBottomOf="@+id/typeLayout">

                <ImageView
                    android:id="@+id/carBrandImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_car_brand"
                    app:layout_constraintBottom_toBottomOf="@+id/carBrand"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/carBrandHint" />

                <TextView
                    android:id="@+id/carBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="07/02/2020"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/carBrandImage"
                    app:layout_constraintTop_toBottomOf="@+id/carBrandHint" />

                <TextView
                    android:id="@+id/carBrandHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_brand"
                    app:layout_constraintStart_toStartOf="@+id/carBrand"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/carColorLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_grey"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carPlateLayout">

                <ImageView
                    android:id="@+id/carColorImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_last_entry"
                    app:layout_constraintBottom_toBottomOf="@+id/carDesc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/carColorHint" />

                <TextView
                    android:id="@+id/carDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="Car Description"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/carColorImage"
                    app:layout_constraintTop_toBottomOf="@+id/carColorHint" />

                <TextView
                    android:id="@+id/carColorHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/car_description"
                    app:layout_constraintStart_toStartOf="@+id/carDesc"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lastEntryLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_grey"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/carColorLayout"
                app:layout_constraintTop_toBottomOf="@+id/carPlateLayout">

                <ImageView
                    android:id="@+id/lastEntryImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_last_entry"
                    app:layout_constraintBottom_toBottomOf="@+id/lastEntry"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/lastEntryHint" />

                <TextView
                    android:id="@+id/lastEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="07/02/2020"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    app:layout_constraintStart_toEndOf="@+id/lastEntryImage"
                    app:layout_constraintTop_toBottomOf="@+id/lastEntryHint" />

                <TextView
                    android:id="@+id/lastEntryHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_entry"
                    app:layout_constraintStart_toStartOf="@+id/lastEntry"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/actionsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_grey"
                android:paddingStart="10dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carColorLayout">


                <TextView
                    android:id="@+id/actionHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/action"
                    android:textColor="@color/grey"
                    android:textSize="14dp"
                    app:layout_constraintBottom_toTopOf="@+id/action"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/actionHint"
                    app:layout_constraintVertical_chainStyle="packed" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/ccp_ic_arrow_drop_down"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_grey"
                android:gravity="top"
                android:hint="Write a note here"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/actionsLayout" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_primary"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintTop_toBottomOf="@+id/notes" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>



